# bitmapflow

./: .dockerignore  .gitignore  README.md  publish_windows.py  run_docker.sh
.github/: FUNDING.yml
.github/workflows/: markdown-link-check-config.json  rust.yml
docker/: Dockerfile
examples/Hell-Hound-Files/: public-license.txt
examples/Sideview Sci-Fi/: public-license.txt
examples/underwater-diving-files/: public-license.txt
examples/warped_caves_files/: public-license.txt
examples/warped_city_files/: public-license.txt
godot/: Icon.png.import  Main.gd  Main.tscn  RustLibrary.tres  export_presets.cfg  project.godot
godot/Autoload/: GlobalHolder.gdns  ImageHolder.gdns  ImageProcessor.gdns  ImageSaver.gdns  Logger.gdns  SpritesheetGenerator.gdns  Startup.gd
godot/Fonts/: FontBig.tres  FontDefault.tres  FontSmall.tres
godot/Textures/: BGChecker.png.import  LoadingIcon.png.import  Splash.png.import  Splash_highres.png.import
godot/UI/: AboutPopup.gdns  AboutPopup.tscn  BG.gd  BG.tscn  LoadingPanel.gd  LoadingPanel.tscn  Menu.gd  Menu.tscn  ProgressBar.gd  ProgressBar.tscn  UI.gd  UI.tscn
godot/UI/ImageView/: ImageView.gd  ImageView.tscn  IntegerTextureRect.gd  IntegerTextureRect.tscn  ViewOptions.gd  ViewOptions.tscn
godot/UI/Resources/: StyleboxBG.tres  StyleboxError.tres  StyleboxMessage.tres  Theme.tres
godot/UI/Sidebar/: Sidebar.gd  Sidebar.tscn
godot/UI/Spritesheet/: Spritesheet.gd  SpritesheetConfigBase.gd  SpritesheetConfigBase.tscn  SpritesheetConfigLoad.gd  SpritesheetConfigLoad.tscn  SpritesheetConfigSave.gd  SpritesheetConfigSave.tscn  (+3 more)
logo/: Logo_unedited.png.import
rust/: Cargo.toml  build.rs  rust-toolchain
rust/src/: about_popup.rs  datatypes.rs  frame.rs  global_holder.rs  image_holder.rs  image_processor.rs  image_saver.rs  lib.rs  logging.rs  spritesheet_generator.rs  utility.rs
(+11 files in other folders)
