[package]
authors = ["Bauxitedev"]
build = "build.rs"
edition = "2018"
name = "bitmapflow-rust"
version = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.51"
approx = "0.5.0"
bracket-color = "0.8.2"
chrono = "0.4.19"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
gdnative = "0.9.3"
gif = "0.11.3"
gif-dispose = "3.1.1"
image = "0.23.14"
imgref = "1.9.1"
itertools = "0.10.3"
log = {version = "0.4.14", features = ["std"]}
once_cell = "1.8.0"
opencv = {version = "0.61.1", features = ["clang-runtime"]}# see https://github.com/twistedfall/opencv-rust/issues/187
rand = "0.8.4"
rayon = "1.5.1"
rgb = "0.8.29"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"

[build-dependencies]
anyhow = "1.0.51"
vergen = "5"
